Change in git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -114,5 +114,6 @@ $RECYCLE.BIN/
 
 # Directories to be ignored
 dist/
+node_modules/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,archive
